--- a/static/assets/css/movie.css
+++ b/static/assets/css/movie.css
@@ -48,7 +48,6 @@
     padding: 2.5rem;
     width: 100%;
     max-width: 1400px;
-    padding-bottom: 30px;
 }
 
 .movie-poster-container {
@@ -142,13 +141,15 @@
 }
 
 .genre-tag {
-    background: linear-gradient(135deg, #2da6de, #1d77b9);
-    padding: 6px 12px;
-    border-radius: 20px;
-    font-size: 13px;
-    font-weight: 600;
-
-    border: 1px solid rgba(255, 255, 255, 0.1);
+    background: #64748b99;
+    padding-left: .75rem;
+    padding-right: .75rem;
+    padding-top: .5rem;
+    padding-bottom: .5rem;
+    border-radius: 9999px;
+    font-size: .875rem;
+    font-weight: 500;
+    color: white;
 }
 
 
