--- a/static/assets/css/movie.css
+++ b/static/assets/css/movie.css
@@ -168,7 +168,7 @@
 .movie-plot {
     font-size: 16px;
     line-height: 1.4;
-    max-width: 600px;
+    max-width: 56rem;
     color: #e2e8f0;
 }
 
