--- a/static/view/movie.html
+++ b/static/view/movie.html
@@ -127,6 +127,7 @@
                                         ${selected.genres.map(genre => `<span class="genre-tag">${genre}</span>`).join('')}
                                     </div>
                                 </div>
+                                <div style="flex: 1 1 0%; height:100px"></div>
                                 <p class="movie-plot">${selected.plot}</p>
                                 <div class="details-grid inside-hero">
                                     <div class="detail-card glass-morphism cast-card">
