--- a/static/assets/css/movie.css
+++ b/static/assets/css/movie.css
@@ -99,13 +99,15 @@
 .hat-main-info {
     display: flex;
     justify-content: space-between;
-    align-items: flex-start; /* ou center, se quiser alinhar verticalmente */
+    align-items: flex-start;
+    /* ou center, se quiser alinhar verticalmente */
 }
-.hat-main-info > div:first-child {
+
+.hat-main-info>div:first-child {
     flex: 1;
 }
-  
-.hat-main-info > div:last-child {
+
+.hat-main-info>div:last-child {
     flex-shrink: 0;
 }
 
@@ -269,7 +271,7 @@
     margin-top: 6px;
     font-size: 0.775rem;
     color: white;
-    text-shadow: 0 1px 2px rgba(0,0,0,0.6);
+    text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6);
     font-weight: 500;
     margin-bottom: 0;
 }
@@ -509,10 +511,11 @@
     border-radius: 4px;
 }
 
-.grid-divisor{
+.grid-divisor {
     grid-template-columns: 65% 32%;
     display: grid;
-    gap: 2.5rem; /* ou use qualquer valor: 16px, 2rem etc. */
+    gap: 2.5rem;
+    /* ou use qualquer valor: 16px, 2rem etc. */
 
 }
 
@@ -525,7 +528,8 @@
 }
 
 .unclicked-card-wrapper {
-    width: 120px; /* 48px de imagem + margem lateral do texto */
+    width: 120px;
+    /* 48px de imagem + margem lateral do texto */
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -539,7 +543,7 @@
     height: 70px;
     border-radius: 4px;
     overflow: hidden;
-    box-shadow: 0 2px 6px rgba(0,0,0,0.3);
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
     transition: transform 0.2s ease;
 }
 
@@ -576,14 +580,27 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    max-height: 500px;
+    max-height: 575px;
     overflow-y: auto;
 }
 
 .history-note {
-    font-size: 0.75rem;
-    color: #cbd5e1;
-    line-height: 1.4;
+    line-height: 1rem;
+    margin-bottom: 1.5rem;
+}
+
+.history-note .primary {
+    font-size: 14px;
+    color: #ffffff;
+    font-weight: 500;
+    margin-bottom: 15.5rem;
+}
+
+.history-note .secondary {
+    font-size: 12px;
+    color: #fca037;
+    /* azul acinzentado suave */
+    font-weight: 400;
 }
 
 .history-block {
@@ -623,6 +640,34 @@
 
 .history-year {
     font-size: 14px;
-    color: #94a3b8;
+    color: #c3cdda;
     margin-top: 2px;
+}
+
+.actual-movie {
+    border-radius: 0.75rem;
+    margin-bottom: 1.5rem;
+}
+
+.actual-movie .history-block{
+    padding: 1rem;
+    background-color: #ffffff26;
+    border-color: #fff6;
+    border-width: 2px;
+    gap: 1rem;
+    align-items: center;
+    display: flex
+}
+
+.actual-movie .history-block p{
+    margin: 0;
+    line-height: 1rem;
+    font-size: .75rem;
+    background-color: #ffffff0f;
+    border-color: #ffffff6c;
+    border-style: solid;
+    border-width: 0 0 0 2px;
+    color: #fff9;
+    border-radius: 5px;
+    padding: 0.5rem;
 }
