--- a/static/view/movie.html
+++ b/static/view/movie.html
@@ -324,7 +324,7 @@
                         <div class="history-text">
                             <div class="history-title">${selected.title}</div>
                             <div class="history-year" style="margin-bottom: .5rem;">${yearSelected}</div>
-                            <p>Last View. Also considered to get your suggestions.</p>
+                            <p>Your Last View influence your suggestions.</p>
                         </div>
                     </div>
                 `);
